syntax = "proto3";

package chat_mgmt;

option go_package = "example.com/proto/chat_mgmt";

service ChatManagement {
    rpc CreateChat (CreateChatRequest) returns (ChatRoomResponse) {}
    rpc DeleteChat (DeleteChatRequest) returns (DeleteChatResponse) {}
    rpc UpdateChat (UpdateChatRequest) returns (ChatRoomResponse) {}
    rpc JoinChat (JoinChatRequest) returns (ChatRoomResponse) {}
    rpc LeaveChat (LeaveChatRequest) returns (ChatRoomResponse) {}
    rpc InviteUser (InviteUserRequest) returns (ChatRoomResponse) {}
    rpc KickUser (KickUserRequest) returns (ChatRoomResponse) {}
    rpc CanWriteChat (CanWriteRequest) returns (CanWriteResponse) {}
    rpc MakeChatAdmin (MakeAdminRequest) returns (ChatRoomWithAdminsResponse) {}
    rpc DeleteChatAdmin (DeleteAdminRequest) returns (ChatRoomWithAdminsResponse) {}
    rpc IsChatAdmin (IsAdminRequest) returns (IsAdminResponse) {}
    rpc GetChatUsers (GetUsersRequest) returns (GetUsersResponse) {}
}

message ChatRoomResponse {
    string chatId = 1;
    string creatorId = 2;
    repeated string participantsIds = 3;
    string name = 4;
    string description = 5;
}

message ChatRoomWithAdminsResponse {
    string chatId = 1;
    string creatorId = 2;
    repeated string participantsIds = 3;
    string name = 4;
    string description = 5;
    repeated string adminsIds = 6;
}

message CreateChatRequest {
    string name = 1;
    string description = 2;
    string creatorId = 3;
    repeated string participantsIds = 4;
}

message DeleteChatRequest {
    string chatId = 1;
    string userId = 2;
}

message DeleteChatResponse {}

message UpdateChatRequest {
    string chatId = 1;
    string name = 2;
    string description = 3;
    string userId = 4;
}

message JoinChatRequest {
    string chatId = 1;
    string userId = 2;
}

message LeaveChatRequest {
    string chatId = 1;
    string userId = 2;
}

message InviteUserRequest {
    string chatId = 1;
    string userId = 2;
    string requestingUserId = 3;
}

message KickUserRequest {
    string chatId = 1;
    string userId = 2;
    string requestingUserId = 3;
}

message CanWriteRequest {
    string chatId = 1;
    string userId = 2;
}

message CanWriteResponse {
    bool canWrite = 1;
}

message MakeAdminRequest {
    string chatId = 1;
    string userId = 2;
    string requestingUserId = 3;
}

message DeleteAdminRequest {
    string chatId = 1;
    string userId = 2;
    string requestingUserId = 3;
}

message IsAdminRequest {
    string chatId = 1;
    string userId = 2;
}

message IsAdminResponse {
    bool isAdmin = 1;
}

message GetUsersRequest {
    string chatId = 1;
}

message GetUsersResponse {
    repeated string userIds = 1;
}